unpackaged/main/default/objects/ffct__MergeProfileState__c/ffct__MergeProfileState__c.object-meta.xml
<CustomObject>
    <description>Hold the configuration and status of a merge profile job.</description>
    <label>Merge Profile State</label>
    <nameField>
        <displayFormat>MP-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merge Profile State</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>