unpackaged/main/default/objects/ffct__MergeProfileState__c/fields/ffct__SourceProfileId__c.field-meta.xml
<CustomField>
    <fullName>ffct__SourceProfileId__c</fullName>
    <label>Source Profile API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>