unpackaged/main/default/objects/ffct__MergeProfileState__c/fields/ffct__TargetProfile__c.field-meta.xml
<CustomField>
    <fullName>ffct__TargetProfile__c</fullName>
    <label>Target Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>