unpackaged/main/default/objects/ffct__MergeProfileState__c/fields/ffct__TargetProfileId__c.field-meta.xml
<CustomField>
    <fullName>ffct__TargetProfileId__c</fullName>
    <label>Target Profile API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>